// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Info component it should show frontend and backend info successfully: version-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  data-testid="version-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
  style="width: 100%; height: 100%;"
>
  <div
    class="MuiGrid-root MuiGrid-container css-1bb2q56-MuiGrid-root"
    data-testid="content-layout-root-14c01398-e7fc-4b09-8dcb-3195acdf120a"
  >
    <div
      style="width: 100%; height: 100%; opacity: 0.2;"
    >
      <div
        class="MuiBox-root css-135vfhz"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-1pymvqh-MuiGrid-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 css-2jbldj-MuiTypography-root"
          >
            Info
          </h2>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-1d81fg3-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1tnxox3"
          >
            <div
              class="MuiBox-root css-1spy2rg"
              data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
              >
                Frontend
              </h6>
              <div
                class="MuiBox-root css-1ed85oj"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    Date
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    fooFrontend
                  </p>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    Version
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    barFrontend
                  </p>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    Build Number
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    bazFrontend
                  </p>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    GIT SHA
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    gooFrontend
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-1spy2rg"
              data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
              >
                Backend
              </h6>
              <div
                class="MuiBox-root css-1ed85oj"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    Date
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    fooBackend
                  </p>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    Version
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    barBackend
                  </p>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    Build Number
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    bazBackend
                  </p>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
                  >
                    GIT SHA
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
                  >
                    gooBackend
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing Info component it should show frontend and backend info successfully: version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  class="MuiBox-root css-1spy2rg"
  data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
  >
    Backend
  </h6>
  <div
    class="MuiBox-root css-1ed85oj"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        Date
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        fooBackend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        Version
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        barBackend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        Build Number
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        bazBackend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        GIT SHA
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        gooBackend
      </p>
    </div>
  </div>
</div>
`;

exports[`Testing Info component it should show frontend and backend info successfully: version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  class="MuiBox-root css-1spy2rg"
  data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
  >
    Frontend
  </h6>
  <div
    class="MuiBox-root css-1ed85oj"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        Date
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        fooFrontend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        Version
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        barFrontend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        Build Number
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        bazFrontend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-yyitj4-MuiTypography-root"
      >
        GIT SHA
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
      >
        gooFrontend
      </p>
    </div>
  </div>
</div>
`;
